--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,40 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+    margin: 0%;
+    padding: 0%;
+}
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+*::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+}
+
+*::-webkit-scrollbar-track {
+    background: transparent;
+    border-radius: 10px;
+}
+
+*::-webkit-scrollbar-thumb {
+    background-color: #b4b4b4;
+    border-radius: 10px;
+    background-clip: content-box;
+}
+
+*::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+}
+
+/* Override PrimeNG Toast CSS */
+.p-toast {
+    width: auto !important;
+    max-width: 95vw;
+}
+
+.p-toast .p-toast-message .p-toast-icon-close {
+    margin: auto !important;
+}
