--- a/src/app/UserComponents/header/header.component.html
+++ b/src/app/UserComponents/header/header.component.html
@@ -9,7 +9,7 @@
 
         <!-- Desktop Menu -->
         <nav class="hidden md:flex space-x-8">
-            <a href="#" class="text-gray-700 hover:text-blue-600 font-medium">Dashboard</a>
+            <a href="user/dashboard" class="text-gray-700 hover:text-blue-600 font-medium">Dashboard</a>
             <a href="#" class="text-gray-700 hover:text-blue-600 font-medium">Buy Plans & Report</a>
             <a href="#" class="text-gray-700 hover:text-blue-600 font-medium">Tunnel & Subscription</a>
             <a href="#" class="text-gray-700 hover:text-blue-600 font-medium">Support</a>
