--- a/src/app/GuestComponents/contact/contact.component.html
+++ b/src/app/GuestComponents/contact/contact.component.html
@@ -19,8 +19,8 @@
                 <p class="text-sm text-gray-600 mb-3">
                     For any service related query and feedback, write us at
                 </p>
-                <a href="mailto:support@fixedip.com" class="text-blue-600 hover:underline">
-                    support@fixedip.com
+                <a href="mailto:support@localtoglobal.com" class="text-blue-600 hover:underline">
+                    support@localtoglobal.com
                 </a>
             </div>
 
