--- a/src/app/UserComponents/header/header.component.html
+++ b/src/app/UserComponents/header/header.component.html
@@ -1,10 +1,9 @@
 <header class="bg-white border-b border-gray-200">
-    <div class="max-w-7xl mx-auto px-6 lg:px-8 flex justify-between items-center h-16">
+    <div class="px-6 lg:px-8 flex justify-between items-center h-16">
 
         <!-- Logo -->
         <div class="flex items-center">
-            <span class="text-xl font-bold text-gray-900">.Fixed</span>
-            <span class="text-xl font-bold text-blue-600">IP</span>
+            <span class="text-xl font-bold text-gray-900">LocalToGlobal</span>
         </div>
 
         <!-- Desktop Menu -->
