--- a/src/app/GuestComponents/login/login.component.html
+++ b/src/app/GuestComponents/login/login.component.html
@@ -6,21 +6,21 @@
         <div class="form-section">
             <h2>Sign In</h2>
             <p>Welcome back! Please sign in to continue.</p>
-            <form>
+            <form [formGroup]="loginForm" (ngSubmit)="verifyLogin()">
                 <label>Email address</label>
-                <input type="email" placeholder="yourname@yourmail.com" required />
+                <input type="email" placeholder="yourname@yourmail.com" formControlName="email" />
+
                 <label>Password</label>
-                <input type="password" placeholder="Enter your password" required />
+                <input type="password" placeholder="Enter your password" formControlName="password" />
+
                 <div style="text-align:right; margin-top:-10px; margin-bottom:15px;">
                     <a href="#">Forgot password?</a>
                 </div>
                 <button type="submit" class="btn-primary">Sign In</button>
-                <div class="divider">OR</div>
-                <button type="button" class="btn-google">Sign In with Google</button>
             </form>
             <div class="links">
-                <p>Don't have an account? <a href="/index.html">Create an Account</a></p>
-                <p>Are you want resend email? <a href="/dashboard.html">Resend Activation Link</a></p>
+                <p>Don't have an account? <a [routerLink]="['/signup']">Create an Account</a></p>
+                <p>Are you want resend email? <a [routerLink]="['/']">Resend Activation Link</a></p>
             </div>
         </div>
     </div>
