feat: update routing and links for password recovery and profile access; enhance user navigation

--- a/src/app/GuestComponents/login/login.component.html
+++ b/src/app/GuestComponents/login/login.component.html
@@ -14,13 +14,13 @@
                 <input type="password" placeholder="Enter your password" formControlName="password" />
 
                 <div style="text-align:right; margin-top:-10px; margin-bottom:15px;">
-                    <a href="#">Forgot password?</a>
+                    <a [routerLink]="['/forget-password']">Forgot password?</a>
                 </div>
                 <button type="submit" class="btn-primary">Sign In</button>
             </form>
             <div class="links">
                 <p>Don't have an account? <a [routerLink]="['/signup']">Create an Account</a></p>
-                <p>Are you want resend email? <a [routerLink]="['/']">Resend Activation Link</a></p>
+                <p>Are you want resend email? <a [routerLink]="['/resend-activation-link']">Resend Activation Link</a></p>
             </div>
         </div>
     </div>
