--- a/src/app/UserComponents/header/header.component.html
+++ b/src/app/UserComponents/header/header.component.html
@@ -27,7 +27,7 @@
       <!-- Dropdown Menu -->
       <div
         class="absolute right-0 mt-2 w-48 bg-white border border-gray-200 rounded-lg shadow-lg opacity-0 scale-95 transform origin-top-right transition-all duration-200 peer-checked:opacity-100 peer-checked:scale-100 pointer-events-none peer-checked:pointer-events-auto">
-        <a [routerLink]="['profile']" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Profile</a>
+        <a [routerLink]="['user/profile']" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Profile</a>
         <div class="border-t border-gray-200"></div>
         <button class="block px-4 py-2 text-red-600 hover:bg-red-50 w-full" (click)="logout()">Logout</button>
       </div>
@@ -66,7 +66,7 @@
       </label>
       <div
         class="absolute left-0 mt-1 w-full bg-white border border-gray-200 rounded-lg shadow-lg opacity-0 scale-95 transform origin-top transition-all duration-200 peer-checked:opacity-100 peer-checked:scale-100 pointer-events-none peer-checked:pointer-events-auto z-10">
-        <a [routerLink]="['profile']" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Profile</a>
+        <a [routerLink]="['user/profile']" class="block px-4 py-2 text-gray-700 hover:bg-gray-100">Profile</a>
         <div class="border-t border-gray-200"></div>
         <button class="block px-4 py-2 text-red-600 hover:bg-red-50 w-full" (click)="logout()">Logout</button>
       </div>
